--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
 .nohover {
-	background-color: #00000000 !important;
+	background-color: transparent !important;
+}
+
+#display {
+	width: 100%;
+	height: 100%;
+	display: block;
+	margin: 0;
+}
+
+#container {
+	width: 100vw;
+	height: 100vh;
+	display: flex;
+	flex-direction: row;
+	margin: 0;
 }
