--- a/style.css
+++ b/style.css
@@ -16,3 +16,19 @@
 	flex-direction: row;
 	margin: 0;
 }
+
+#gl-canvas {
+	width: 100%;
+	height: 100%;
+	display: block;
+	margin: 0;
+	position: absolute;
+	z-index: 999;
+	pointer-events: none;
+}
+
+#equation-container {
+	overflow-y: scroll;
+	width: 700px;
+	height: 100vh;
+}
