home button, equation disabling, slight appearance adjustment

--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 .nohover {
 	background-color: transparent !important;
+	border: none !important;
+}
+
+.toolbar-button {
+	float: right !important;
 }
 
 #display {
