--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@
 	border: none !important;
 }
 
+#toolbar-equation-container {
+	display: flex;
+	flex-direction: column;
+	width: 500px;
+}
+
 #display {
 	width: 100%;
 	height: 100%;
@@ -30,7 +36,7 @@
 
 #equation-container {
 	overflow-y: auto;
-	width: 700px;
+	width: 500px;
 	height: 100vh;
 }
 
